Fix Java deprecations for updated toolchain